--- a/eureka/build.gradle
+++ b/eureka/build.gradle
@@ -29,11 +29,8 @@ ext {
 }
 
 dependencies {
-	compile('org.springframework.cloud:spring-cloud-starter-netflix-hystrix')
-	compile('org.springframework.cloud:spring-cloud-starter-netflix-ribbon')
-	compile('org.springframework.cloud:spring-cloud-starter-netflix-zuul')
-	compile('org.springframework.cloud:spring-cloud-starter-openfeign')
-	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
+	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-server')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
