Adding feign into entry-point

--- a/zuul/src/main/resources/application.properties
+++ b/zuul/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-zuul.routes.sum.url=http://localhost:8090/sum
+zuul.routes.home.url=http://localhost:8777
+zuul.routes.sum.url=http://localhost:8777/sum
+zuul.routes.fallback.url=http://localhost:8777/fallback
 
 ribbon.eureka.enabled=false
 spring.application.name=zuul
