--- a/microservices/entry-point/build.gradle
+++ b/microservices/entry-point/build.gradle
@@ -29,10 +29,14 @@ ext {
 }
 
 dependencies {
-	compile('org.springframework.cloud:spring-cloud-starter-netflix-ribbon')
+	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
+	compile('org.springframework.cloud:spring-cloud-starter-netflix-hystrix')
 	compile('org.springframework.cloud:spring-cloud-starter-netflix-zuul')
 	compile('org.springframework.cloud:spring-cloud-starter-openfeign')
-	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
+	compile group: 'io.github.openfeign', name: 'feign-okhttp', version: '9.7.0'
+	compile group: 'io.github.openfeign', name: 'feign-gson', version: '9.7.0'
+
+
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
