Adding implementing sub route into entry-point

--- a/zuul/src/main/resources/application.properties
+++ b/zuul/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 zuul.routes.home.url=http://localhost:8777
 zuul.routes.sum.url=http://localhost:8777/sum
+zuul.routes.sub.url=http://localhost:8777/sub
 zuul.routes.fallback.url=http://localhost:8777/fallback
 
 ribbon.eureka.enabled=false
